[tool.poetry]
name = "burn-fat-bot"
version = "0.1.0"
description = ""
authors = ["Xenia Saiakhova <ksusaiakhova@gmail.com>"]
readme = "README.md"
packages = [{include = "burn_fat_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
